--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 7),
                python (>= 2.5.2)
 Build-Depends-Indep: python-support (>= 0.5.3),
                      pkg-config (>= 0.20)
-Standards-Version: 3.9.2.0
+Standards-Version: 3.9.4
 XS-Python-Version: >= 2.5
 Homepage: http://www.rabbitvcs.org
 
@@ -23,7 +23,8 @@ Depends: ${misc:Depends},
          meld (>=1.1.2), 
          ipython (>=0.7.1),
          hicolor-icon-theme (>= 0.10-2),
-         python-dulwich (>= 0.6.1)
+         python-dulwich (>= 0.6.1),
+         python-simplejson (>= 2.1.1)
 Conflicts: nautilussvn, rabbitvcs
 Replaces: nautilussvn
 Description: Easy version control
@@ -36,7 +37,7 @@ Package: rabbitvcs-cli
 Architecture: all
 Depends: ${misc:Depends},
          ${python:Depends},
-         rabbitvcs-core (>= 0.15)
+         rabbitvcs-core (>= 0.15.3)
 Description: Command line interface for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -45,30 +46,20 @@ Description: Command line interface for RabbitVCS
 Package: rabbitvcs-gedit
 Architecture: all
 Depends: ${misc:Depends},
-         gedit (<< 3.0),
-         rabbitvcs-core (>= 0.15)
-Description: Gedit extension for RabbitVCS
- RabbitVCS is a set of graphical tools written to provide simple and
- straightforward access to the version control systems SVN (Subversion) and Git.
- This is the extension for gedit (v2) text editor.
-
-Package: rabbitvcs-gedit3
-Architecture: all
-Depends: ${misc:Depends},
          gedit (>= 3.0),
-         rabbitvcs-core (>= 0.15)
+         rabbitvcs-core (>= 0.15.3)
 Description: Gedit extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
- This is the extension for gedit (v3) text editor.
+ This is the extension for gedit text editor.
 
 Package: rabbitvcs-nautilus
 Architecture: all
 Depends: ${misc:Depends},
-         nautilus (<< 3.0~),
-         python-nautilus (>= 0.5.0~),
-         python-nautilus (<< 1.0~),
-         rabbitvcs-core (>= 0.15)
+         nautilus (<< 1:3.0~),
+         python-nautilus (>= 0.5.0),
+         python-nautilus (<< 1.0),
+         rabbitvcs-core (>= 0.15.3)
 Description: Nautilus 2 extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -77,10 +68,10 @@ Description: Nautilus 2 extension for RabbitVCS
 Package: rabbitvcs-nautilus3
 Architecture: all
 Depends: ${misc:Depends},
-         nautilus (>= 3~),
-         python-nautilus (>= 1.0~),
-         python-gobject (>= 2.28.2~),
-         rabbitvcs-core (>= 0.15)
+         nautilus (>= 1:3~),
+         python-nautilus (>= 1.0),
+         python-gobject-2 (>= 2.28.2),
+         rabbitvcs-core (>= 0.15.3)
 Description: Nautilus 3 extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -90,8 +81,8 @@ Package: rabbitvcs-thunar
 Architecture: all
 Depends: ${misc:Depends},
          thunar (>= 0.4.0),
-         thunarx-python (>= 0.2.0),
-         rabbitvcs-core (>= 0.15)
+         thunarx-python (>= 0.3.0),
+         rabbitvcs-core (>= 0.15.3)
 Description: Thunar extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
