--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,7 @@ Depends: ${misc:Depends},
          meld (>=1.1.2), 
          ipython (>=0.7.1),
          hicolor-icon-theme (>= 0.10-2),
-         python-dulwich (>= 0.6.1),
-         python-simplejson (>= 2.1.1)
+         python-dulwich (>= 0.6.1)
 Conflicts: nautilussvn, rabbitvcs
 Replaces: nautilussvn
 Description: Easy version control
@@ -37,7 +36,7 @@ Package: rabbitvcs-cli
 Architecture: all
 Depends: ${misc:Depends},
          ${python:Depends},
-         rabbitvcs-core (>= 0.15.3)
+         rabbitvcs-core (>= 0.15)
 Description: Command line interface for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -47,7 +46,7 @@ Package: rabbitvcs-gedit
 Architecture: all
 Depends: ${misc:Depends},
          gedit (>= 3.0),
-         rabbitvcs-core (>= 0.15.3)
+         rabbitvcs-core (>= 0.15)
 Description: Gedit extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -57,9 +56,9 @@ Package: rabbitvcs-nautilus
 Architecture: all
 Depends: ${misc:Depends},
          nautilus (<< 1:3.0~),
-         python-nautilus (>= 0.5.0),
-         python-nautilus (<< 1.0),
-         rabbitvcs-core (>= 0.15.3)
+         python-nautilus (>= 0.5.0~),
+         python-nautilus (<< 1.0~),
+         rabbitvcs-core (>= 0.15)
 Description: Nautilus 2 extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -69,9 +68,9 @@ Package: rabbitvcs-nautilus3
 Architecture: all
 Depends: ${misc:Depends},
          nautilus (>= 1:3~),
-         python-nautilus (>= 1.0),
-         python-gobject-2 (>= 2.28.2),
-         rabbitvcs-core (>= 0.15.3)
+         python-nautilus (>= 1.0~),
+         python-gobject (>= 2.28.2~),
+         rabbitvcs-core (>= 0.15)
 Description: Nautilus 3 extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
@@ -82,7 +81,7 @@ Architecture: all
 Depends: ${misc:Depends},
          thunar (>= 0.4.0),
          thunarx-python (>= 0.3.0),
-         rabbitvcs-core (>= 0.15.3)
+         rabbitvcs-core (>= 0.15)
 Description: Thunar extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
