--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,10 @@ Section: devel
 Priority: optional
 Build-Depends: debhelper (>= 7),
                python (>= 2.5.2)
-Build-Depends-Indep: python-support (>= 0.5.3),
+Build-Depends-Indep: dh-python (>= 1.20140511),
                      pkg-config (>= 0.20)
-Standards-Version: 3.9.4
-XS-Python-Version: >= 2.5
+Standards-Version: 3.9.5
+X-Python-Version: >= 2.5
 Homepage: http://www.rabbitvcs.org
 
 Package: rabbitvcs-core
@@ -20,7 +20,7 @@ Depends: ${misc:Depends},
          python-dbus (>= 0.82.4),
          python-configobj (>= 4.4.0),
          subversion (>= 1.4.6),
-         meld (>=1.1.2), 
+         meld (>=1.1.2),
          ipython (>=0.7.1),
          hicolor-icon-theme (>= 0.10-2),
          python-dulwich (>= 0.6.1),
@@ -87,4 +87,4 @@ Description: Thunar extension for RabbitVCS
  RabbitVCS is a set of graphical tools written to provide simple and
  straightforward access to the version control systems SVN (Subversion) and Git.
  This is the extension for the Thunar file manager.
- 
+
